--- a/tp3/makefile
+++ b/tp3/makefile
@@ -4,13 +4,17 @@ TEST = test
 
 all: $(TEST)
 
-$(TEST): test.c pile.o
+$(TEST): test.c pile.o arbre.o
 	gcc -o $(TEST) test.c pile.o $(OPT)
 	$(LOG) "executable $(TEST) généré"
 
 pile.o: pile.h pile.c
 	gcc -o pile.o -c pile.c $(OPT)
 	$(LOG) "lib pile généré"
+
+arbre.o: arbre.h arbre.c
+	gcc -o arbre.o -c arbre.c $(OPT)
+	$(LOG) "lib arbre généré"
 
 clean:
 	rm *.o
